[project]
name = "dmc-mcp-server"
version = "0.2.0"
description = "Tencent Cloud DMC MCP Server - Execute SQL on TDSQL-C / TDSQL via browser cookies"
authors = [
    { name = "dmc-mcp-server contributors" },
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.28.0",
    "pycryptodome>=3.20.0",
]

[project.scripts]
dmc-mcp-server = "dmc_mcp_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dmc_mcp_server"]
