[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dmc-mcp-server"
version = "0.2.1"
description = "Tencent Cloud DMC MCP Server - Execute SQL on TDSQL-C / TDSQL via browser cookies"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "dmc-mcp-server contributors" },
]
keywords = ["mcp", "tdsql", "tdsql-c", "tencent-cloud", "database", "sql", "ai", "llm", "dmc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.28.0",
    "pycryptodome>=3.20.0",
]

[project.urls]
Homepage = "https://github.com/yangfeng20/dmc-mcp-server"
Repository = "https://github.com/yangfeng20/dmc-mcp-server"

[project.scripts]
dmc-mcp-server = "dmc_mcp_server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dmc_mcp_server"]
